<resources>
    <string name="app_name">NewsApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="top_news">Top News</string>
    <string name="categories">Categories</string>
    <string name="saved">Saved</string>
    <string name="technology">technology</string>
    <string name="sports">sports</string>
    <string name="science">science</string>
    <string name="health">health</string>
    <string name="general">general</string>
    <string name="entertain">entertain</string>
    <string name="business">business</string>
    <string name="choose_a_category_to_start_reading">Choose a category to start reading</string>
    <string name="category">Category</string>
    <string name="savedNews">Saved news</string>
    <string name="NewsApp">NewsApp</string>
    <string name="no_saved_news">No Saved News</string>
</resources>