<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.categories.CategoriesFragment">

    <TextView
        android:id="@+id/tv_category_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_a_category_to_start_reading"
        android:textColor="@color/text_black_color"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_business"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_category_title">

        <ImageView
            android:id="@+id/iv_business"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_business"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_business" />

        <TextView
            android:id="@+id/tv_business"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/business"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_entertain"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toEndOf="@id/cl_business"
        app:layout_constraintTop_toBottomOf="@id/tv_category_title">

        <ImageView
            android:id="@+id/iv_entertain"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_entertain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_entertain" />

        <TextView
            android:id="@+id/tv_entertain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/entertain"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_general"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toEndOf="@id/cl_entertain"
        app:layout_constraintTop_toBottomOf="@id/tv_category_title">

        <ImageView
            android:id="@+id/iv_general"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_general"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_general" />

        <TextView
            android:id="@+id/tv_general"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/general"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_health"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_business">

        <ImageView
            android:id="@+id/iv_health"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_health"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_health" />

        <TextView
            android:id="@+id/tv_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/health"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_science"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toEndOf="@id/cl_health"
        app:layout_constraintTop_toBottomOf="@id/cl_entertain">

        <ImageView
            android:id="@+id/iv_science"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_science"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_science" />

        <TextView
            android:id="@+id/tv_science"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/science"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_sports"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toEndOf="@id/cl_science"
        app:layout_constraintTop_toBottomOf="@id/cl_general">

        <ImageView
            android:id="@+id/iv_sports"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_sports"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_sports" />

        <TextView
            android:id="@+id/tv_sports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/sports"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_technology"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/circle_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_health">

        <ImageView
            android:id="@+id/iv_technology"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="5dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/tv_technology"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_technology" />

        <TextView
            android:id="@+id/tv_technology"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/technology"
            android:textAlignment="center"
            android:textColor="@color/text_black_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
